--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             })
             .then(console.log);
         });
+
+        $('#firebase-add-book').on('click', function() {
+            $.post('https://buka-test.firebaseio.com/books.json', JSON.stringify({bookTypeId: 3, bookGenreId: 2, title: "Zrób sobie raj", author: "Mariusz Szczygieł"}))
+            .then(console.log);
+        });
     });
     </script>
 </head>
@@ -64,6 +69,9 @@
     <div style="margin-top: 30px;">
         <div style="display: inline;"><button id="books-list">Get books list [Mock]</button></div>
         <div style="display: inline;"><button id="firebase-books-list" style="background-color:orange; border-color: orange;">Get books list [Firebase]</button></div>
+    </div>
+    <div style="margin-top: 30px;">
+        <div style="display: inline;"><button id="firebase-add-book" style="background-color:orange; border-color: orange;">Add book [Firebase]</button></div>
     </div>
 </body>
 </html>
